d/changelog: Document Sylvestre Ledru's change
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 debhelper (12.1) UNRELEASED; urgency=medium
 
   [ Xavier Guimard ]
-  * dh_fixperms: add .node in mode_0644_patterns
+  * dh_fixperms: add .node in mode_0644_patterns.
+
+  [ Sylvestre Ledru ]
+  * dh_strip: Print a warning when an ELF binary does not have a
+    build-id (or when dh_strip cannot find it).
 
  -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100
 
