--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ debhelper (12.1) UNRELEASED; urgency=medium
   * meson.pm: Dump "meson-logs/testlog.txt" if testing fails with
     an error.  Thanks to Jeremy Bicha for the suggestion.
     (Closes: #918066)
+  * dh_missing: Clarify the documentation about when -X with other
+    helpers can may dh_missing ignore paths that are not installed.
+    Thanks to Hilko Bengen for reporting the original documentation
+    was unsufficient.  (Closes: #917362)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100
 
