Update French translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ debhelper (12.1) UNRELEASED; urgency=medium
     Thanks to Hilko Bengen for reporting the original documentation
     was unsufficient.  (Closes: #917362)
 
+  [ Baptiste Jammet ]
+  * fr.po: Update French translation.  (Closes: #921254)
+
  -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100
 
 debhelper (12) unstable; urgency=medium
