fr.po: Fix invalid POD formatting
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4897,7 +4897,7 @@ msgstr ""
 #| "I<params>>]"
 msgid "B<dh_dwz> [S<I<debhelper options>>] [B<-X>I<item>] [S<B<--> I<params>>]"
 msgstr ""
-"B<dh_dwz> [I<options_de_debhelper>] [B<-X>I<item>] [S<B<--> I<paramètres>]"
+"B<dh_dwz> [I<options_de_debhelper>] [B<-X>I<item>] [S<B<--> I<paramètres>>]"
 
 #. type: textblock
 #: dh_dwz:22
