--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ debhelper (12.1) UNRELEASED; urgency=medium
     helpers can may dh_missing ignore paths that are not installed.
     Thanks to Hilko Bengen for reporting the original documentation
     was unsufficient.  (Closes: #917362)
+  * d/control: Bump Standards-Version to 4.3.0 - no changes required.
 
   [ Baptiste Jammet ]
   * fr.po: Update French translation.  (Closes: #921254)
