--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.1) UNRELEASED; urgency=medium
+debhelper (12.1) unstable; urgency=medium
 
   [ Xavier Guimard ]
   * dh_fixperms: add .node in mode_0644_patterns.
@@ -26,7 +26,7 @@ debhelper (12.1) UNRELEASED; urgency=medium
   [ Baptiste Jammet ]
   * fr.po: Update French translation.  (Closes: #921254)
 
- -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100
+ -- Niels Thykier <niels@thykier.net>  Sun, 10 Feb 2019 20:33:53 +0000
 
 debhelper (12) unstable; urgency=medium
 
