dh_installinitramfs: Install hooks as executable files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.2) UNRELEASED; urgency=medium
+
+  * dh_installinitramfs: Install hooks as executable rather than
+    plan files.  Thanks to Thorsten Glaser for the report.
+    (Closes: #922990)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 23 Feb 2019 07:40:46 +0000
+
 debhelper (12.1) unstable; urgency=medium
 
   [ Xavier Guimard ]
