--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (12.2) UNRELEASED; urgency=medium
   * dh_installinitramfs: Install hooks as executable rather than
     plan files.  Thanks to Thorsten Glaser for the report.
     (Closes: #922990)
+  * dh_compress: Fix bug where examples where compressed when a
+    doc package shipped examples for another package.  Thanks to
+    Christian Kastner for reporting this.  (Closes: #922267)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 23 Feb 2019 07:40:46 +0000
 
