--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.2) UNRELEASED; urgency=medium
+debhelper (12.1.1) unstable; urgency=medium
 
   * dh_installinitramfs: Install hooks as executable rather than
     plan files.  Thanks to Thorsten Glaser for the report.
@@ -7,7 +7,7 @@ debhelper (12.2) UNRELEASED; urgency=medium
     doc package shipped examples for another package.  Thanks to
     Christian Kastner for reporting this.  (Closes: #922267)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 23 Feb 2019 07:40:46 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 23 Feb 2019 13:24:47 +0000
 
 debhelper (12.1) unstable; urgency=medium
 
