Dh_Lib: Ensure error uses a well-defined stable error code
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.1.2) UNRELEASED; urgency=medium
+
+  * Dh_Lib: Ensure the error function always triggers the same
+    exit code on termination.  Previously, it depended on the
+    value of the last error (if any).
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 25 Feb 2019 07:23:03 +0000
+
 debhelper (12.1.1) unstable; urgency=medium
 
   * dh_installinitramfs: Install hooks as executable rather than
