Lintian override: package-does-not-use-debhelper-or-cdbs
It uses the freshest possible version of debhelper!

Closes: debian/debhelper!22

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ debhelper (12.5) UNRELEASED; urgency=medium
   * dh_installmodules: Also lok for compressed kernel modules
     in addition to uncompressed kernel modules (gz, bz2 or xz).
 
+  [ Adam Borowski ]
+  * d/s/lintian-overrides: Override lintian warning about debhelper
+    not using debhelper.
+
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Aug 2019 16:58:16 +0000
 
 debhelper (12.4) unstable; urgency=medium
