--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * Dh_Lib: Ensure the error function always triggers the same
     exit code on termination.  Previously, it depended on the
     value of the last error (if any).
+  * Buildsystem/make: Fix regression where cross-flags were
+    passed in a non-cross build.  (Closes: #925175)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 25 Feb 2019 07:23:03 +0000
 
