cmake.pm: Emit correct CMAKE_SYSTEM_PROCESSOR for mips64el during cross builds
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
 debhelper (12.1.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Dh_Lib: Ensure the error function always triggers the same
     exit code on termination.  Previously, it depended on the
     value of the last error (if any).
   * Buildsystem/make: Fix regression where cross-flags were
     passed in a non-cross build.  (Closes: #925175)
+
+  [ Helmut Grohne ]
+  * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
+    (Closes: #926815)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 25 Feb 2019 07:23:03 +0000
 
