Update on Portuguese translation of manpage

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,10 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
     (Closes: #926815)
 
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)  (Closes: #886279)
+
+
  -- Niels Thykier <niels@thykier.net>  Mon, 25 Feb 2019 07:23:03 +0000
 
 debhelper (12.1.1) unstable; urgency=medium
