dh_perl: Fix code for pruning usr/share/doc
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     value of the last error (if any).
   * Buildsystem/make: Fix regression where cross-flags were
     passed in a non-cross build.  (Closes: #925175)
+  * dh_perl: Fix code to prune (skip) /usr/share/doc which
+    never worked.
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
