PROGRAMMING: Document DH_AUTOSCRIPTDIR
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     passed in a non-cross build.  (Closes: #925175)
   * dh_perl: Fix code to prune (skip) /usr/share/doc which
     never worked.
+  * doc/PROGRAMMING: Document that the environment variable
+    DH_AUTOSCRIPTDIR can be used for testing purposes to
+    shadow existing or test new autoscript snippets.  Thanks
+    to Dmitry Bogatov for the suggestion.  (Closes: #925281)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
