dh_compress: Exclude .haddock and .hs by default
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     DH_AUTOSCRIPTDIR can be used for testing purposes to
     shadow existing or test new autoscript snippets.  Thanks
     to Dmitry Bogatov for the suggestion.  (Closes: #925281)
+  * dh_compress: Exclude .haddock and .hs files (as this is
+    customary for haskell packages).
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
