dh_installinfo: Update NOOP PROMISE to fix issue dh_missing
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     to Dmitry Bogatov for the suggestion.  (Closes: #925281)
   * dh_compress: Exclude .haddock and .hs files (as this is
     customary for haskell packages).
+  * dh_installinfo: Update NOOP PROMISE to account for
+    dh_missing's needs.  Thanks to Daniel Kahn Gillmor for
+    reporting the issue.  (Closes: #930689)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
