--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * dh_installinfo: Update NOOP PROMISE to account for
     dh_missing's needs.  Thanks to Daniel Kahn Gillmor for
     reporting the issue.  (Closes: #930689)
+  * debhelper.pod: Document that debhelper will use
+    dpkg-buildflags for setting CFLAGS et al and that it is
+    recommended to rely on dpkg-buildflags's features for
+    extending the default.  (Closes: #923626)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
