dh_strip: Be more robust about catching errors from file(1)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,9 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     dpkg-buildflags for setting CFLAGS et al and that it is
     recommended to rely on dpkg-buildflags's features for
     extending the default.  (Closes: #923626)
+  * dh_strip: Make dh_strip more robust with issues from
+    file(1).  Thanks to Christoph Biedl for reporting the
+    issue.  (Closes: #931995)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
