dh_{shlibdeps,strip}: Use file --brief and anchor output parsing regexes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,11 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * dh_strip: Make dh_strip more robust with issues from
     file(1).  Thanks to Christoph Biedl for reporting the
     issue.  (Closes: #931995)
+  * dh_shlibdeps: Pass --brief to file(1) and anchor the
+    output parsing regex to avoid false-positive
+    misdetections.  Thanks to Christoph Biedl for the
+    suggestion.  (Closes: #931996)
+  * dh_strip: Ditto.
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
