--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,10 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     misdetections.  Thanks to Christoph Biedl for the
     suggestion.  (Closes: #931996)
   * dh_strip: Ditto.
+  * dh_installman: Improve documentation to be more clear
+    about exactly which new features dh_installman got in
+    compat 11.  Thanks to Laurent Bigonville for pointing
+    out the issue.  (Closes: #912999)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
