--- a/debian/changelog
+++ b/debian/changelog
@@ -37,11 +37,14 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     fakeroot and file(1) appear to support the option.
     Thanks to Christoph Biedl for requesting the feature.
     (Closes: #932006)
-  * Dh_Lib.pm: Support substittuting additional variables
+  * Dh_Lib.pm: Support substituting additional variables
     into the generated maintainer scripts.  These include
     DEB_(BUILD|HOST|TARGET)_* and ENV.* which point to the
     variables from dpkg-architecture(1) and variables from
     the environment (respectively).
+  * dh_installdeb: Support additional substitution variables
+    on the commandline via -DTOKEN=VALUE to replace #TOKEN#
+    with VALUE.  (Closes: #25235)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
