--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,8 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * dh_installdeb: Support additional substitution variables
     on the commandline via -DTOKEN=VALUE to replace #TOKEN#
     with VALUE.  (Closes: #25235)
+  * d/control: Bump Standards-Version to 4.4.0 - no changes
+    required.
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
