--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.1.2) UNRELEASED; urgency=medium
+debhelper (12.2) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Dh_Lib: Ensure the error function always triggers the same
@@ -61,7 +61,7 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * Update Portuguese translation (Américo Monteiro)  (Closes: #886279)
 
 
- -- Niels Thykier <niels@thykier.net>  Mon, 25 Feb 2019 07:23:03 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 14 Jul 2019 10:29:20 +0000
 
 debhelper (12.1.1) unstable; urgency=medium
 
