d/changelog: Document recent changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (12.2.1) UNRELEASED; urgency=medium
+
+  [ Dmitry Bogatov ]
+  * dh_installinit: Fix regression where dh_installinit bailed
+    out on --name if only one of the acted on packages had an
+    init script file.  Thanks to Helmut Grohne for reporting
+    the issue.  (Closes: #932073)
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 20:19:52 +0000
+
 debhelper (12.2) unstable; urgency=medium
 
   [ Niels Thykier ]
