--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.2.1) UNRELEASED; urgency=medium
+debhelper (12.2.1) unstable; urgency=medium
 
   [ Dmitry Bogatov ]
   * dh_installinit: Fix regression where dh_installinit bailed
@@ -6,7 +6,7 @@ debhelper (12.2.1) UNRELEASED; urgency=medium
     init script file.  Thanks to Helmut Grohne for reporting
     the issue.  (Closes: #932073)
 
- -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 20:19:52 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 20:21:32 +0000
 
 debhelper (12.2) unstable; urgency=medium
 
