--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (12.2.2) UNRELEASED; urgency=medium
+debhelper (12.2.2) unstable; urgency=medium
 
   * dh_shlibdeps: Remove regex anchor when parsing file(1) to aovid
     regressions with setuid/setgid binaries.  Thanks to James
     Cowgill for reporting the issue.  (Closes: #932240)
   * dh_strip: Ditto.
 
- -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 21:02:21 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 21:03:38 +0000
 
 debhelper (12.2.1) unstable; urgency=medium
 
