dh_installinit: Revert check to ensure --name always matches a file
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.2.3) UNRELEASED; urgency=medium
+
+  * dh_installinit: Revert "Fail with an error if --name is given but
+    there is no matching init script.".  (Closes: #932073,
+    Reopens: #462389)
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 19 Jul 2019 18:27:41 +0000
+
 debhelper (12.2.2) unstable; urgency=medium
 
   * dh_shlibdeps: Remove regex anchor when parsing file(1) to aovid
