--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.2.3) UNRELEASED; urgency=medium
+debhelper (12.2.3) unstable; urgency=medium
 
   * dh_installinit: Revert "Fail with an error if --name is given but
     there is no matching init script.".  (Closes: #932073,
@@ -9,7 +9,7 @@ debhelper (12.2.3) UNRELEASED; urgency=medium
     arch:all package).  Thanks to Helmut Grohne for reporting the
     issue.  (Closes: #932262)
 
- -- Niels Thykier <niels@thykier.net>  Fri, 19 Jul 2019 18:27:41 +0000
+ -- Niels Thykier <niels@thykier.net>  Fri, 19 Jul 2019 19:18:03 +0000
 
 debhelper (12.2.2) unstable; urgency=medium
 
