Update on Portuguese translation of manpage
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12.2.4) UNRELEASED; urgency=medium
+
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)  (Closes: #927394)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 20 Jul 2019 07:20:56 +0000
+
 debhelper (12.2.3) unstable; urgency=medium
 
   * dh_installinit: Revert "Fail with an error if --name is given but
