--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
-debhelper (12.2.4) UNRELEASED; urgency=medium
+debhelper (12.2.5) UNRELEASED; urgency=medium
 
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)  (Closes: #927394)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 20 Jul 2019 07:20:56 +0000
+  [ Niels Thykier ]
+  * dh_installsystemduser: Fix bug that would neuter sorting of unit
+    files and make the resulting maintscripts unreproducible.  Thanks
+    to Daniel Kahn Gillmor for reporting the bug.  (Closes: #932646)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 21 Jul 2019 18:40:38 +0000
 
 debhelper (12.2.3) unstable; urgency=medium
 
