dh_dwz: Stop passing -q to dwz
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ debhelper (12.2.5) UNRELEASED; urgency=medium
   * dh_installsystemduser: Fix bug that would neuter sorting of unit
     files and make the resulting maintscripts unreproducible.  Thanks
     to Daniel Kahn Gillmor for reporting the bug.  (Closes: #932646)
+  * dh_dwz: Remove the -q flag when calling dwz(1).  It is
+    sufficiently silently with -q and aids with debugging for others.
+    (Closes: #933561, #931792)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jul 2019 18:40:38 +0000
 
