dh_dwz: Skip multifile for udeb packages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ debhelper (12.2.5) UNRELEASED; urgency=medium
     but succeeds anyway by default.  The previous behaviour of
     insisting on a multifile can be obtained by explicitly passing
     --dwz-multifile.  (Closes: #933541)
+  * dh_dwz: Skip multifile generation for udeb packages.
+    (Closes: #933212)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jul 2019 18:40:38 +0000
 
