--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.3) UNRELEASED; urgency=medium
+debhelper (12.3) unstable; urgency=medium
 
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)  (Closes: #927394)
@@ -24,7 +24,7 @@ debhelper (12.3) UNRELEASED; urgency=medium
     for details).  Packagers are advised to verify the resulting
     shlibs file before removing --add-udeb in an upload.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 21 Jul 2019 18:40:38 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 06 Aug 2019 16:55:26 +0000
 
 debhelper (12.2.3) unstable; urgency=medium
 
