dh: Remove support for --{until,after,before,remaining}
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -562,6 +562,9 @@ The B<dh> command will not accept any of the deprecated "manual
 sequence control" parameters (B<--before>, B<--after>, etc.).  Please
 use override targets instead.
 
+B<Retroactively applied to earlier compapt levels>: B<dh> no longer
+accepts any of these since debhelper/12.4.
+
 =item -
 
 The B<dh> command will no longer use log files to track which commands
