--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (12.4) UNRELEASED; urgency=medium
+
+  * dh: Retroactively remove support for manual dh sequence
+    operators (--until, --after, --before and --remaining).
+    This breaks about 8 source packages that still rely on this
+    feature and have not yet migrated away.  (Closes: #932537)
+    Please see the debhelper bug for relevant bug numbers and
+    package names.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 12 Aug 2019 15:04:36 +0000
+
 debhelper (12.3) unstable; urgency=medium
 
   [ Translations ]
