--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.4) UNRELEASED; urgency=medium
+debhelper (12.4) unstable; urgency=medium
 
   * dh: Retroactively remove support for manual dh sequence
     operators (--until, --after, --before and --remaining).
@@ -7,7 +7,7 @@ debhelper (12.4) UNRELEASED; urgency=medium
     Please see the debhelper bug for relevant bug numbers and
     package names.
 
- -- Niels Thykier <niels@thykier.net>  Mon, 12 Aug 2019 15:04:36 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 12 Aug 2019 15:07:01 +0000
 
 debhelper (12.3) unstable; urgency=medium
 
