--- a/debhelper.pod
+++ b/debhelper.pod
@@ -562,7 +562,7 @@ The B<dh> command will not accept any of the deprecated "manual
 sequence control" parameters (B<--before>, B<--after>, etc.).  Please
 use override targets instead.
 
-B<Retroactively applied to earlier compapt levels>: B<dh> no longer
+B<Retroactively applied to earlier compat levels>: B<dh> no longer
 accepts any of these since debhelper/12.4.
 
 =item -
