--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (12.4) unstable; urgency=medium
     feature and have not yet migrated away.  (Closes: #932537)
     Please see the debhelper bug for relevant bug numbers and
     package names.
+  * dh_strip: Skip stripping of guile-2.2 files by skipping all
+    all files matching "/guile/.*\.go$".  Thanks to Jeremy Bicha
+    and Rob Browning.  (Closes: #907061)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 12 Aug 2019 15:07:01 +0000
 
