--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.4.1) UNRELEASED; urgency=medium
+
+  * dh_strip: Skip stripping of guile-2.2 files by skipping all
+    all files matching "/guile/.*\.go$".  Thanks to Jeremy Bicha
+    and Rob Browning.  (Closes: #907061)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 14 Aug 2019 16:58:16 +0000
+
 debhelper (12.4) unstable; urgency=medium
 
   * dh: Retroactively remove support for manual dh sequence
@@ -6,9 +14,6 @@ debhelper (12.4) unstable; urgency=medium
     feature and have not yet migrated away.  (Closes: #932537)
     Please see the debhelper bug for relevant bug numbers and
     package names.
-  * dh_strip: Skip stripping of guile-2.2 files by skipping all
-    all files matching "/guile/.*\.go$".  Thanks to Jeremy Bicha
-    and Rob Browning.  (Closes: #907061)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 12 Aug 2019 15:07:01 +0000
 
