d/changelog: Describe Frank Schaefer's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-debhelper (12.4.1) UNRELEASED; urgency=medium
+debhelper (12.5) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_strip: Skip stripping of guile-2.2 files by skipping all
     all files matching "/guile/.*\.go$".  Thanks to Jeremy Bicha
     and Rob Browning.  (Closes: #907061)
+
+  [ Frank Schaefer ]
+  * dh_installmodules: Also lok for compressed kernel modules
+    in addition to uncompressed kernel modules (gz, bz2 or xz).
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Aug 2019 16:58:16 +0000
 
