dh_auto_*: Officially adopt --sourcedir/--builddir
Since the beginning, debhelper has accepted abbrevated command line
parameters.  Anyone that has been using (e.g.):

      dh $@ --sourcedir=foo

To pass --sourcedir to dh_install has *also* implicitly passed it to
the dh_auto_* helpers. Due to auto-abbrevation being enabled, they
have considered it a short form of --sourcedirectory.

This is trivially confirmable by comparing:

    dh_auto_configure --bar foo
    Unknown option: bar
    dh_auto_configure: unknown option or error during option parsing; aborting

with

    dh_auto_configure --sourcedir foo
    dh_auto_configure: invalid or non-existing path to the source directory: foo

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -254,13 +254,13 @@ B<dh_auto_>I<*> programs.
 Force use of the specified I<buildsystem>, instead of trying to auto-select
 one which might be applicable for the package.
 
-=item B<-D>I<directory>, B<--sourcedirectory=>I<directory>
+=item B<-D>I<directory>, B<--sourcedir=>I<directory>, B<--sourcedirectory=>I<directory>
 
 Assume that the original package source tree is at the specified
 I<directory> rather than the top level directory of the Debian
 source package tree.
 
-=item B<-B>[I<directory>], B<--builddirectory=>[I<directory>]
+=item B<-B>[I<directory>], B<--builddir>[I<=directory>], B<--builddirectory>[I<=directory>]
 
 Enable out of source building and use the specified I<directory> as the build
 directory. If I<directory> parameter is omitted, a default build directory
