--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ debhelper (12.5) UNRELEASED; urgency=medium
   * dh_strip: Skip stripping of guile-2.2 files by skipping all
     all files matching "/guile/.*\.go$".  Thanks to Jeremy Bicha
     and Rob Browning.  (Closes: #907061)
+  * dh_auto_*: Officially adopt --sourcedir and --builddir as official
+    parameters.  They have always worked since debhelper defaulted to
+    supporting auto-abbreviated parameters, so this is simply documenting
+    fait accompli for the most common abbreviation.
 
   [ Frank Schaefer ]
   * dh_installmodules: Also lok for compressed kernel modules
