Disable auto-abbrev of cli options in c13 to enable dh optimizations
Disable auto-abbreviation of command-line options in compat 13 and
re-enable dh's optimization for skipping redundant commands when
passed long options.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -944,6 +944,14 @@ B<dh_auto_test> that passes extra parameters to upstream test runner
 should be reviewed as B<meson test> is not command line compatible
 with B<ninja test>.
 
+=item -
+
+All debhelper like tools based on the official debhelper library
+(including B<dh> and the official B<dh_*> tools) no longer accepts
+abbreviated command parameters.  At the same time, B<dh> now
+optimizes out calls to redundant B<dh_*> helpers even when passed
+long command line options.
+
 =back
 
 =back
