--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ debhelper (12.5) UNRELEASED; urgency=medium
     parameters.  They have always worked since debhelper defaulted to
     supporting auto-abbreviated parameters, so this is simply documenting
     fait accompli for the most common abbreviation.
+  * dh_*: Disable auto-abbreviation of command line parameters in compat
+    13.
+  * dh: Optimize out redundant helpers even when passed long options in
+    compat 13.
 
   [ Frank Schaefer ]
   * dh_installmodules: Also lok for compressed kernel modules
