dh_builddeb: Remove support for --destdir
It is not useful as the packager cannot set it to anything as it is
the builder that has an expectation of where the debs are produced.
It would have been a lot more useful if the builder could have
specified this value some how (but it would have to be aligned with
dpkg with e.g.  for the .changes).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ debhelper (12.5) UNRELEASED; urgency=medium
     13.
   * dh: Optimize out redundant helpers even when passed long options in
     compat 13.
+  * dh_builddeb: Remove --destdir.  It has never been useful as everyone
+    excepts the debs to be placed in "..".
 
   [ Frank Schaefer ]
   * dh_installmodules: Also lok for compressed kernel modules
