Dh_Lib: Add hint to resolve double-specified compat level
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,10 @@ debhelper (12.5) UNRELEASED; urgency=medium
     compat 13.
   * dh_builddeb: Remove --destdir.  It has never been useful as everyone
     excepts the debs to be placed in "..".
+  * Dh_Lib.pm: Add a hint to resolve the error caused by having the
+    compat level specified both as a build-dependency and in
+    debian/compat.  Thanks to Alessandro Grassi for reporting the issue
+    on IRC.
 
   [ Frank Schaefer ]
   * dh_installmodules: Also lok for compressed kernel modules
