dh_makeshlibs: Fix bug in --no-add-udeb
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ debhelper (12.5) UNRELEASED; urgency=medium
     compat level specified both as a build-dependency and in
     debian/compat.  Thanks to Alessandro Grassi for reporting the issue
     on IRC.
+  * dh_makeshlibs: Fix bug where --no-add-udeb could trigger the
+    auto-detection code.
 
   [ Frank Schaefer ]
   * dh_installmodules: Also lok for compressed kernel modules
