Add Closes for dh_makeshlibs bug
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,7 +19,7 @@ debhelper (12.5) UNRELEASED; urgency=medium
     debian/compat.  Thanks to Alessandro Grassi for reporting the issue
     on IRC.
   * dh_makeshlibs: Fix bug where --no-add-udeb could trigger the
-    auto-detection code.
+    auto-detection code.  (Closes: #934891)
 
   [ Frank Schaefer ]
   * dh_installmodules: Also lok for compressed kernel modules
