d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,7 +25,7 @@ debhelper (12.5) UNRELEASED; urgency=medium
     same time, verbosely fail if the udeb contains a library not present
     in the deb (overridable with --add-udeb).  (Closes: #934889)
   * dh: Support making "dh-sequence-ADDON" Build-Depends relation
-    conditonal on build-profiles (etc.).  If the relation is ignored due
+    conditional on build-profiles (etc.).  If the relation is ignored due
     to the current build-profiles (etc.), then addon is silently skipped.
   * dh: Support running addons in "arch-only" or "indep-only" mode by
     adding "dh-sequence-ADDON" in Build-Depends-Arch or
