d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,7 +45,7 @@ debhelper (12.5) UNRELEASED; urgency=medium
     packages, please add an explicit Builds-Depends on dh-sequence-elf-tools.
 
   [ Frank Schaefer ]
-  * dh_installmodules: Also lok for compressed kernel modules
+  * dh_installmodules: Also look for compressed kernel modules
     in addition to uncompressed kernel modules (gz, bz2 or xz).
 
   [ Adam Borowski ]
