--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.5) UNRELEASED; urgency=medium
+debhelper (12.5) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_strip: Skip stripping of guile-2.2 files by skipping all
@@ -52,7 +52,7 @@ debhelper (12.5) UNRELEASED; urgency=medium
   * d/s/lintian-overrides: Override lintian warning about debhelper
     not using debhelper.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 14 Aug 2019 16:58:16 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 17 Aug 2019 10:54:08 +0000
 
 debhelper (12.4) unstable; urgency=medium
 
