--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12.5.1) UNRELEASED; urgency=medium
+
+  * dh_installdeb: Allow "+" to appear in token names as it is
+    a valid character for package names.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 17 Aug 2019 12:40:56 +0000
+
 debhelper (12.5) unstable; urgency=medium
 
   [ Niels Thykier ]
