dh_installdeb: Detect invalid token names passed to -D in most cases
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (12.5.1) UNRELEASED; urgency=medium
 
   * dh_installdeb: Allow "+" to appear in token names as it is
     a valid character for package names.
+  * dh_installdeb: Reject invalid token names passed to -D or
+    --define (in most cases).
 
  -- Niels Thykier <niels@thykier.net>  Sat, 17 Aug 2019 12:40:56 +0000
 
