dh_makeshlibs: Fix bug in handling of -X
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (12.5.1) UNRELEASED; urgency=medium
     a valid character for package names.
   * dh_installdeb: Reject invalid token names passed to -D or
     --define (in most cases).
+  * dh_makeshlibs: Fix bug in -X where it would no longer match
+    as expected.  A regression since 12.5 - thanks to  Aurelien
+    Jarno for reporting the issue over IRC.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 17 Aug 2019 12:40:56 +0000
 
