--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.5.1) UNRELEASED; urgency=medium
+debhelper (12.5.1) unstable; urgency=medium
 
   * dh_installdeb: Allow "+" to appear in token names as it is
     a valid character for package names.
@@ -8,7 +8,7 @@ debhelper (12.5.1) UNRELEASED; urgency=medium
     as expected.  A regression since 12.5 - thanks to  Aurelien
     Jarno for reporting the issue over IRC.
 
- -- Niels Thykier <niels@thykier.net>  Sat, 17 Aug 2019 12:40:56 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 17 Aug 2019 15:09:07 +0000
 
 debhelper (12.5) unstable; urgency=medium
 
