d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,7 +25,7 @@ debhelper (12.5) unstable; urgency=medium
   * dh: Optimize out redundant helpers even when passed long options in
     compat 13.
   * dh_builddeb: Remove --destdir.  It has never been useful as everyone
-    excepts the debs to be placed in "..".
+    expects the debs to be placed in "..".
   * Dh_Lib.pm: Add a hint to resolve the error caused by having the
     compat level specified both as a build-dependency and in
     debian/compat.  Thanks to Alessandro Grassi for reporting the issue
