--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.5.2) UNRELEASED; urgency=medium
+
+  * dh_makeshlibs: Fix regression in compat 10 and earlier where
+    dh_makeshlibs now failed on error.  This safety check was
+    intended to be a compat 11 or later feature.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 07:18:04 +0000
+
 debhelper (12.5.1) unstable; urgency=medium
 
   * dh_installdeb: Allow "+" to appear in token names as it is
