dh: Fix regression in dh addon API
Previously, dh's API functions were sloppy in their return values but
*often* they would return a truth value.  We changed that in 12.5 by
insisting on return undef.  However, that broke addons relying on the
API function to work around Perl's idiom of "module must end with a
truth value".

To resolve that, we now always return a truth value from all API
functions to fix that.  This also give consistent behaviour, which is
better than the previous setup.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (12.5.2) UNRELEASED; urgency=medium
   * dh_makeshlibs: Fix regression in compat 10 and earlier where
     dh_makeshlibs now failed on error.  This safety check was
     intended to be a compat 11 or later feature.
+  * dh: Ensure addon API functions return 1 to avoid gratious
+    breakage of addons due to perl's idiosyncrasy of requiring a
+    truth value at the end of modules.  (See #935016)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 07:18:04 +0000
 
