--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.5.2) UNRELEASED; urgency=medium
+debhelper (12.5.2) unstable; urgency=medium
 
   * dh_makeshlibs: Fix regression in compat 10 and earlier where
     dh_makeshlibs now failed on error.  This safety check was
@@ -7,7 +7,7 @@ debhelper (12.5.2) UNRELEASED; urgency=medium
     breakage of addons due to perl's idiosyncrasy of requiring a
     truth value at the end of modules.  (See #935016)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 07:18:04 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 07:36:20 +0000
 
 debhelper (12.5.1) unstable; urgency=medium
 
