Revert "dh_builddeb: Remove support for --destdir"
This reverts commit e91dbdba83aa60c0313fd68f92652f00d34c97b6.

Not sure the usage makes sense to me, but for now we roll it until we
can review the situation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (12.5.3) UNRELEASED; urgency=medium
     field in dh without breaking dh's own --list or --help
     parameter.  This fixes a regression since 12.5 where dh's
     --help and --list options were broken.
+  * dh_builddeb: Revert removal of --destdir for now.  It is in
+    fact used to hardcode paths in some cases e.g. v4l2loopback's
+    debian/rules.modules.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 18:33:50 +0000
 
