--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ debhelper (12.5.3) UNRELEASED; urgency=medium
   * dh_builddeb: Revert removal of --destdir for now.  It is in
     fact used to hardcode paths in some cases e.g. v4l2loopback's
     debian/rules.modules.
+  * dh_makeshlibs: Disable auto-filtering of udeb libraries.  It
+    cannot be implemented without violating the requirements for
+    the noudeb build-profile.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 18:33:50 +0000
 
