dh_makeshlibs: Avoid erroring out under the noudeb profile due to empty udebs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ debhelper (12.5.3) UNRELEASED; urgency=medium
   * dh_makeshlibs: Disable auto-filtering of udeb libraries.  It
     cannot be implemented without violating the requirements for
     the noudeb build-profile.
+  * dh_makeshlibs: Fix invalid error under the noudeb profile
+    where the absence of udeb content is expected rather than an
+    in issue.  (Closes: #934999)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 18:33:50 +0000
 
