--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.5.3) UNRELEASED; urgency=medium
+debhelper (12.5.3) unstable; urgency=medium
 
   * Dh_Getopt.pm: Skip compat call if d/control cannot be found
     and just assume that auto-abbreviation can be disabled in that
@@ -18,7 +18,7 @@ debhelper (12.5.3) UNRELEASED; urgency=medium
     where the absence of udeb content is expected rather than an
     in issue.  (Closes: #934999)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 18 Aug 2019 18:33:50 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 19 Aug 2019 09:50:19 +0000
 
 debhelper (12.5.2) unstable; urgency=medium
 
