--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (12.5.4) UNRELEASED; urgency=medium
+
+  * dh_installxfonts: Remove version in dependency on xfonts-utils
+    added to ${misc:Depends}.  The version requirement has been
+    satisfied for the past 3-4 releases.
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 20 Aug 2019 14:14:47 +0000
+
 debhelper (12.5.3) unstable; urgency=medium
 
   * Dh_Getopt.pm: Skip compat call if d/control cannot be found
