dh: Fix bug in binary-indep in compat 5-12
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ debhelper (12.5.4) UNRELEASED; urgency=medium
     for automatic udeb detection, which incorrectly also checked
     when --add-udeb was passed.  Thanks to Andreas Metzler for
     reporting the issue.  (Closes: #935577)
+  * dh: Fix bug where overrides for dh_dwz, dh_strip, dh_makeshlibs
+    or dh_shlibdeps could be triggered via binary-indep in compat
+    12 and earlier.  Thanks to Andreas Beckmann for reporting the
+    issue.  (Closes: #935780)
 
  -- Niels Thykier <niels@thykier.net>  Tue, 20 Aug 2019 14:14:47 +0000
 
