--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.5.4) UNRELEASED; urgency=medium
+debhelper (12.5.4) unstable; urgency=medium
 
   * dh_installxfonts: Remove version in dependency on xfonts-utils
     added to ${misc:Depends}.  The version requirement has been
@@ -12,7 +12,7 @@ debhelper (12.5.4) UNRELEASED; urgency=medium
     12 and earlier.  Thanks to Andreas Beckmann for reporting the
     issue.  (Closes: #935780)
 
- -- Niels Thykier <niels@thykier.net>  Tue, 20 Aug 2019 14:14:47 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 01 Sep 2019 07:23:05 +0000
 
 debhelper (12.5.3) unstable; urgency=medium
 
