--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (12.6) UNRELEASED; urgency=medium
+
+  [ Sven Joachim ]
+  * Split debhelper into debhelper (the tools) and libdebhelper-perl
+    (the Perl libraries).  (Closes: #821130)
+  * d/rules: Call dh_missing --fail-missing to catch bugs where files
+    are not installed anywhere.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 08 Sep 2019 05:59:42 +0000
+
 debhelper (12.5.4) unstable; urgency=medium
 
   * dh_installxfonts: Remove version in dependency on xfonts-utils
