dh_makeshlibs: Fix regression with automatic udeb detection
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 debhelper (12.6) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
+  * dh_makeshlibs: Fix regression where versionless SONAMEs could
+    trigger a rejection of the "generated" shlibs file (despite
+    dh_makeshlibs not generating any "shlibs" files).
+    (Closes: #939635)
+
   [ Sven Joachim ]
   * Split debhelper into debhelper (the tools) and libdebhelper-perl
     (the Perl libraries).  (Closes: #821130)
